fix wrapping issue in registry table

--- a/themes/default/theme/src/scss/docs/_docs-main.scss
+++ b/themes/default/theme/src/scss/docs/_docs-main.scss
@@ -90,6 +90,7 @@ body.section-registry {
             padding: 0 0 12px 0;
             margin: 0;
             line-height: 1.6;
+            overflow-wrap: break-word;
         }
 
         table {
